# gap9radsetup

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  common.py  configs.py  copy_to_my_machine.sh  fake_avrk4.py  logger_formatter.py  main.py  reboot.py  reboot_machine.py  run_experiment.py  run_experiment_EM.py  run_experiment_rad.py
BilinearResize/: Bilinear_Resize.c  CMakeLists.txt  gaptest.yml  golden.h
MatMult/: CMakeLists.txt  Makefile  MatMult.c  MatMultKernels.c  MatMultKernels.h  gaptest.yml
MatrixAdd/: Makefile  MatAdd.c
Mnist/: CMakeLists.txt  Makefile  Mnist.c  gaptest.yml
benchmarks/BilinearResize/: ImgIO.c  Makefile  sdk.config
benchmarks/MatMulNew/: Makefile  MatMulModel.c  MatMulRunTest.c  README.rst  common.py  golden.h
benchmarks/MatMulNew/old_code/: CMakeLists.txt  Makefile  MatMulRunTest.c  gaptest.yml  golden.h  sdk.config
benchmarks/MatMult/: MatMult.c  sdk.config
benchmarks/MatrixAdd/: CMakeLists.txt  Makefile  MatAdd.c  gaptest.yml
benchmarks/Mnist/: Makefile  sdk.config
benchmarks/cnn/: AllTest.c  Makefile
benchmarks/crc/: CMakeLists.txt  Makefile  beebsc.c  beebsc.h  crc.c  crc32.c  gaptest.yml  support.h
benchmarks/efficient_net/: .gitignore  common.mk  efficientnet_lite.h  emul.mk  tflite_run.md
benchmarks/efficient_net/images/: ILSVRC2012_val_00011158_280.ppm
benchmarks/efficient_net/models/: nntool_script  nntool_script_hwc  nntool_script_ne16  nntool_script_q  nntool_script_q_hwc  nntool_script_q_ne16  test_singleimage_nntool.py
benchmarks/memradtest/: Makefile  gaptest.yml  memradtest.c
benchmarks/mlGemm/: mlGemm.c  shared_globals.h
benchmarks/mobilenet/: .gitignore  Makefile  golden_mobilenetv1.h
benchmarks/mobilenet/accuracy_on_validation_data/: README.md
benchmarks/perf/: performance_counter.h
benchmarks/resnet/: .gitignore  ResNet.h  common.mk  main.c  parse_meas_all.sh  run_meas.sh
benchmarks/resnet/common/: model_decl.mk
benchmarks/resnet/model/: nntool_script  resnet50_astats.pickle
benchmarks/resnet/quant_data_ppm/: ILSVRC2012_val_00000250.ppm  ILSVRC2012_val_00000334.ppm  ILSVRC2012_val_00000499.ppm  ILSVRC2012_val_00000542.ppm  ILSVRC2012_val_00000724.ppm  ILSVRC2012_val_00000873.ppm  ILSVRC2012_val_00001028.ppm  ILSVRC2012_val_00001273.ppm  ILSVRC2012_val_00001296.ppm  ILSVRC2012_val_00001385.ppm  ILSVRC2012_val_00001592.ppm  ILSVRC2012_val_00001616.ppm  ILSVRC2012_val_00001636.ppm  ILSVRC2012_val_00001775.ppm  ILSVRC2012_val_00001836.ppm  ILSVRC2012_val_00001929.ppm  ILSVRC2012_val_00002044.ppm  ILSVRC2012_val_00002201.ppm  ILSVRC2012_val_00002345.ppm  ILSVRC2012_val_00002364.ppm  ILSVRC2012_val_00002415.ppm  ILSVRC2012_val_00002417.ppm  ILSVRC2012_val_00002455.ppm  ILSVRC2012_val_00002473.ppm  ILSVRC2012_val_00002835.ppm  ILSVRC2012_val_00003083.ppm  ILSVRC2012_val_00003189.ppm  ILSVRC2012_val_00003271.ppm  ILSVRC2012_val_00003411.ppm  ILSVRC2012_val_00003437.ppm  ILSVRC2012_val_00003438.ppm  ILSVRC2012_val_00003477.ppm  ILSVRC2012_val_00003559.ppm  ILSVRC2012_val_00003712.ppm  ILSVRC2012_val_00003866.ppm  ILSVRC2012_val_00003949.ppm  ILSVRC2012_val_00004120.ppm  ILSVRC2012_val_00004197.ppm  ILSVRC2012_val_00004314.ppm  ILSVRC2012_val_00004484.ppm  (+43 more)
benchmarks/testFPU/: Makefile  main.c
benchmarks/testFPU/old/: math_fns.c  math_fns.h  mlShared.h  testFPU.c  testFPU.h  testLNU.c  testset.cfg
cnn/: Makefile
efficient_net/: .gitignore  Makefile  README.rst  efficientnet_lite.c  gaptest.yml  parse_meas_all.sh  run_meas.sh
efficient_net/common/: model_decl.mk
efficient_net/images/: ILSVRC2012_val_00011158_240.ppm  ILSVRC2012_val_00011158_260.ppm  ILSVRC2012_val_00011158_300.ppm
efficient_net/models/: test_imagenet_nntool.py
mobilenet/: main.c
mobilenet/models/: download_models.sh
old_scripts/: dnn_log_helper.py  main.py
resnet/: .gitignore  Makefile  README.md  gaptest.yml
resnet/common/: model_rules.mk
resnet/images/: goldfish.ppm
resnet/model/: collect_statistics.py  nntool_script_quant  preprocessing.py  resnet18_astats.pickle  test_accuracy.py
resnet/quant_data_ppm/: ILSVRC2012_val_00000135.ppm  ILSVRC2012_val_00000318.ppm  ILSVRC2012_val_00000338.ppm  ILSVRC2012_val_00000464.ppm  ILSVRC2012_val_00000481.ppm  ILSVRC2012_val_00000722.ppm  ILSVRC2012_val_00000802.ppm  ILSVRC2012_val_00000884.ppm  ILSVRC2012_val_00001105.ppm  ILSVRC2012_val_00001154.ppm  ILSVRC2012_val_00001214.ppm  ILSVRC2012_val_00001251.ppm  ILSVRC2012_val_00001281.ppm  ILSVRC2012_val_00001468.ppm  ILSVRC2012_val_00001521.ppm  ILSVRC2012_val_00001563.ppm  ILSVRC2012_val_00001604.ppm  ILSVRC2012_val_00001815.ppm  ILSVRC2012_val_00001876.ppm  ILSVRC2012_val_00002037.ppm  ILSVRC2012_val_00002367.ppm  ILSVRC2012_val_00002378.ppm  ILSVRC2012_val_00002489.ppm  ILSVRC2012_val_00002496.ppm  ILSVRC2012_val_00002587.ppm  ILSVRC2012_val_00002622.ppm  ILSVRC2012_val_00002637.ppm  ILSVRC2012_val_00002748.ppm  ILSVRC2012_val_00002814.ppm  ILSVRC2012_val_00002861.ppm  ILSVRC2012_val_00003115.ppm  ILSVRC2012_val_00003145.ppm  ILSVRC2012_val_00003214.ppm  ILSVRC2012_val_00003368.ppm  ILSVRC2012_val_00003369.ppm  ILSVRC2012_val_00003525.ppm  ILSVRC2012_val_00003656.ppm  ILSVRC2012_val_00003741.ppm  ILSVRC2012_val_00003864.ppm  ILSVRC2012_val_00003890.ppm  (+77 more)
